ansible/roles/nexus/files/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: nexus3
  labels:
    app: nexus3
spec:
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: nexus3
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
